fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -1359,6 +1359,70 @@ OTHER/SuperLU_5.0/SRC/tmp -text
 OTHER/SuperLU_5.0/SRC/tmp1 -text
 OTHER/SuperLU_5.0/SRC/util.c -text
 OTHER/SuperLU_5.0/SRC/xerbla.c -text
+OTHER/SuperLU_5.1.1/SRC/Makefile -text
+OTHER/SuperLU_5.1.1/SRC/colamd.c -text
+OTHER/SuperLU_5.1.1/SRC/colamd.h -text
+OTHER/SuperLU_5.1.1/SRC/dcolumn_bmod.c -text
+OTHER/SuperLU_5.1.1/SRC/dcolumn_dfs.c -text
+OTHER/SuperLU_5.1.1/SRC/dcopy_to_ucol.c -text
+OTHER/SuperLU_5.1.1/SRC/ddiagonal.c -text
+OTHER/SuperLU_5.1.1/SRC/dgscon.c -text
+OTHER/SuperLU_5.1.1/SRC/dgsequ.c -text
+OTHER/SuperLU_5.1.1/SRC/dgsisx.c -text
+OTHER/SuperLU_5.1.1/SRC/dgsitrf.c -text
+OTHER/SuperLU_5.1.1/SRC/dgsrfs.c -text
+OTHER/SuperLU_5.1.1/SRC/dgssv.c -text
+OTHER/SuperLU_5.1.1/SRC/dgssvx.c -text
+OTHER/SuperLU_5.1.1/SRC/dgstrf.c -text
+OTHER/SuperLU_5.1.1/SRC/dgstrs.c -text
+OTHER/SuperLU_5.1.1/SRC/dlacon2.c -text
+OTHER/SuperLU_5.1.1/SRC/dlangs.c -text
+OTHER/SuperLU_5.1.1/SRC/dlaqgs.c -text
+OTHER/SuperLU_5.1.1/SRC/dldperm.c -text
+OTHER/SuperLU_5.1.1/SRC/dmach.c -text
+OTHER/SuperLU_5.1.1/SRC/dmemory.c -text
+OTHER/SuperLU_5.1.1/SRC/dmyblas2.c -text
+OTHER/SuperLU_5.1.1/SRC/dpanel_bmod.c -text
+OTHER/SuperLU_5.1.1/SRC/dpanel_dfs.c -text
+OTHER/SuperLU_5.1.1/SRC/dpivotL.c -text
+OTHER/SuperLU_5.1.1/SRC/dpivotgrowth.c -text
+OTHER/SuperLU_5.1.1/SRC/dpruneL.c -text
+OTHER/SuperLU_5.1.1/SRC/dreadhb.c -text
+OTHER/SuperLU_5.1.1/SRC/dreadrb.c -text
+OTHER/SuperLU_5.1.1/SRC/dreadtriple.c -text
+OTHER/SuperLU_5.1.1/SRC/dsnode_bmod.c -text
+OTHER/SuperLU_5.1.1/SRC/dsnode_dfs.c -text
+OTHER/SuperLU_5.1.1/SRC/dsp_blas2.c -text
+OTHER/SuperLU_5.1.1/SRC/dsp_blas3.c -text
+OTHER/SuperLU_5.1.1/SRC/dutil.c -text
+OTHER/SuperLU_5.1.1/SRC/get_perm_c.c -text
+OTHER/SuperLU_5.1.1/SRC/heap_relax_snode.c -text
+OTHER/SuperLU_5.1.1/SRC/ilu_dcolumn_dfs.c -text
+OTHER/SuperLU_5.1.1/SRC/ilu_dcopy_to_ucol.c -text
+OTHER/SuperLU_5.1.1/SRC/ilu_ddrop_row.c -text
+OTHER/SuperLU_5.1.1/SRC/ilu_dpanel_dfs.c -text
+OTHER/SuperLU_5.1.1/SRC/ilu_dpivotL.c -text
+OTHER/SuperLU_5.1.1/SRC/ilu_dsnode_dfs.c -text
+OTHER/SuperLU_5.1.1/SRC/ilu_heap_relax_snode.c -text
+OTHER/SuperLU_5.1.1/SRC/ilu_relax_snode.c -text
+OTHER/SuperLU_5.1.1/SRC/input_error.c -text
+OTHER/SuperLU_5.1.1/SRC/mark_relax.c -text
+OTHER/SuperLU_5.1.1/SRC/mc64ad.c -text
+OTHER/SuperLU_5.1.1/SRC/memory.c -text
+OTHER/SuperLU_5.1.1/SRC/mmd.c -text
+OTHER/SuperLU_5.1.1/SRC/qselect.c -text
+OTHER/SuperLU_5.1.1/SRC/relax_snode.c -text
+OTHER/SuperLU_5.1.1/SRC/slu_Cnames.h -text
+OTHER/SuperLU_5.1.1/SRC/slu_ddefs.h -text
+OTHER/SuperLU_5.1.1/SRC/slu_util.h -text
+OTHER/SuperLU_5.1.1/SRC/smach.c -text
+OTHER/SuperLU_5.1.1/SRC/sp_coletree.c -text
+OTHER/SuperLU_5.1.1/SRC/sp_ienv.c -text
+OTHER/SuperLU_5.1.1/SRC/sp_preorder.c -text
+OTHER/SuperLU_5.1.1/SRC/superlu_enum_consts.h -text
+OTHER/SuperLU_5.1.1/SRC/superlu_timer.c -text
+OTHER/SuperLU_5.1.1/SRC/supermatrix.h -text
+OTHER/SuperLU_5.1.1/SRC/util.c -text
 OTHER/SuperLU_DIST_2.0/SRC/Cnames.h -text
 OTHER/SuperLU_DIST_2.0/SRC/Makefile -text
 OTHER/SuperLU_DIST_2.0/SRC/colamd.c -text
