fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -1271,6 +1271,60 @@ OTHER/SuperLU_DIST_2.5/SRC/temp -text
 OTHER/SuperLU_DIST_2.5/SRC/util.c -text
 OTHER/SuperLU_DIST_2.5/SRC/util_dist.h -text
 OTHER/SuperLU_DIST_2.5/SRC/xerbla.c -text
+OTHER/SuperLU_DIST_4.3/SRC/GetDiagU.c -text
+OTHER/SuperLU_DIST_4.3/SRC/Makefile -text
+OTHER/SuperLU_DIST_4.3/SRC/comm.c -text
+OTHER/SuperLU_DIST_4.3/SRC/ddistribute.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dgsequ_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dlangs_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dlaqgs_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dldperm_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dmach_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dmemory_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dmyblas2_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dreadMM.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dreadhb.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dreadrb.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dreadtriple.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dsp_blas2_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dsp_blas3_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/dutil_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/etree.c -text
+OTHER/SuperLU_DIST_4.3/SRC/get_perm_c.c -text
+OTHER/SuperLU_DIST_4.3/SRC/get_perm_c_parmetis.c -text
+OTHER/SuperLU_DIST_4.3/SRC/mc64ad_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/memory.c -text
+OTHER/SuperLU_DIST_4.3/SRC/mmd.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pddistribute.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgsequ.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgsmv.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgsmv_AXglobal.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgsrfs.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgsrfs_ABXglobal.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgssvx.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgssvx_ABglobal.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgstrf.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgstrf2.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgstrs.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgstrs1.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgstrs_Bglobal.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdgstrs_lsum.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdlangs.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdlaqgs.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdsymbfact_distdata.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pdutil.c -text
+OTHER/SuperLU_DIST_4.3/SRC/psymbfact.c -text
+OTHER/SuperLU_DIST_4.3/SRC/psymbfact_util.c -text
+OTHER/SuperLU_DIST_4.3/SRC/pxerr_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/smach_dist.c -text
+OTHER/SuperLU_DIST_4.3/SRC/sp_colorder.c -text
+OTHER/SuperLU_DIST_4.3/SRC/sp_ienv.c -text
+OTHER/SuperLU_DIST_4.3/SRC/static_schedule.c -text
+OTHER/SuperLU_DIST_4.3/SRC/superlu_grid.c -text
+OTHER/SuperLU_DIST_4.3/SRC/superlu_timer.c -text
+OTHER/SuperLU_DIST_4.3/SRC/symbfact.c -text
+OTHER/SuperLU_DIST_4.3/SRC/util.c -text
+OTHER/SuperLU_DIST_4.3/SRC/xerr_dist.c -text
 OTHER/SuperLU_MT/Cnames.h -text
 OTHER/SuperLU_MT/Makefile -text
 OTHER/SuperLU_MT/README -text
