fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -589,6 +589,7 @@ MAKES/Makefile.def.EC2-STARCLUSTER32 -text
 MAKES/Makefile.def.EC2-SUSE -text
 MAKES/Makefile.def.EC2-UBUNTU -text
 MAKES/Makefile.def.EC2-WINDOWS-CYGWIN -text
+MAKES/Makefile.def.FMKSTAR -text
 MAKES/Makefile.def.HANSEN -text
 MAKES/Makefile.def.INTEL -text
 MAKES/Makefile.def.INTEL2 -text
