Adding Python and Tcl interpreters implementation

--- a/.gitattributes
+++ b/.gitattributes
@@ -2979,8 +2979,19 @@ SRC/handler/handler.tex -text
 SRC/interpreter/DL_Interpreter.cpp -text
 SRC/interpreter/DL_Interpreter.h -text
 SRC/interpreter/Makefile -text
+SRC/interpreter/OpenSeesBeamIntegrationCommands.cpp -text
+SRC/interpreter/OpenSeesCommands.cpp -text
+SRC/interpreter/OpenSeesCommands.h -text
 SRC/interpreter/OpenSeesCommandsPython.cpp -text
 SRC/interpreter/OpenSeesCommandsTcl.cpp -text
+SRC/interpreter/OpenSeesCrdTransfCommands.cpp -text
+SRC/interpreter/OpenSeesElementCommands.cpp -text
+SRC/interpreter/OpenSeesMiscCommands.cpp -text
+SRC/interpreter/OpenSeesNDMaterialCommands.cpp -text
+SRC/interpreter/OpenSeesOutputCommands.cpp -text
+SRC/interpreter/OpenSeesPatternCommands.cpp -text
+SRC/interpreter/OpenSeesSectionCommands.cpp -text
+SRC/interpreter/OpenSeesTimeSeriesCommands.cpp -text
 SRC/interpreter/OpenSeesUniaxialMaterialCommands.cpp -text
 SRC/interpreter/PythonAnalysisBuilder.cpp -text
 SRC/interpreter/PythonAnalysisBuilder.h -text
@@ -2988,8 +2999,14 @@ SRC/interpreter/PythonInterpreter.cpp -text
 SRC/interpreter/PythonInterpreter.h -text
 SRC/interpreter/PythonModelBuilder.cpp -text
 SRC/interpreter/PythonModelBuilder.h -text
+SRC/interpreter/PythonModule.cpp -text
+SRC/interpreter/PythonModule.h -text
+SRC/interpreter/PythonWrapper.cpp -text
+SRC/interpreter/PythonWrapper.h -text
 SRC/interpreter/TclInterpreter.cpp -text
 SRC/interpreter/TclInterpreter.h -text
+SRC/interpreter/TclWrapper.cpp -text
+SRC/interpreter/TclWrapper.h -text
 SRC/interpreter/Truss.py -text
 SRC/interpreter/pythonMain.cpp -text
 SRC/interpreter/tclMain.cpp -text
