Updating PFEM solvers

--- a/.gitattributes
+++ b/.gitattributes
@@ -4537,10 +4537,24 @@ SRC/system_of_eqn/linearSOE/sparseGEN/PFEMCompressibleLinSOE.cpp -text
 SRC/system_of_eqn/linearSOE/sparseGEN/PFEMCompressibleLinSOE.h -text
 SRC/system_of_eqn/linearSOE/sparseGEN/PFEMCompressibleSolver.cpp -text
 SRC/system_of_eqn/linearSOE/sparseGEN/PFEMCompressibleSolver.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMCompressibleSolver_Mumps.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMCompressibleSolver_Mumps.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMGeneralLinSOE.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMGeneralLinSOE.h -text
 SRC/system_of_eqn/linearSOE/sparseGEN/PFEMLinSOE.cpp -text
 SRC/system_of_eqn/linearSOE/sparseGEN/PFEMLinSOE.h -text
 SRC/system_of_eqn/linearSOE/sparseGEN/PFEMSolver.cpp -text
 SRC/system_of_eqn/linearSOE/sparseGEN/PFEMSolver.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMSolver_Mumps.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMSolver_Mumps.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMSolver_Umfpack.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMSolver_Umfpack.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMUnifiedLinSOE.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMUnifiedLinSOE.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMUnifiedSolver.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMUnifiedSolver.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMUnifiedSolver_Hybrid.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/PFEMUnifiedSolver_Hybrid.h -text
 SRC/system_of_eqn/linearSOE/sparseGEN/SparseGenColLinSOE.cpp -text
 SRC/system_of_eqn/linearSOE/sparseGEN/SparseGenColLinSOE.h -text
 SRC/system_of_eqn/linearSOE/sparseGEN/SparseGenColLinSOE.tex -text
