T.Doc - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -3146,6 +3146,8 @@ SRC/material/nD/PlaneStressUserMaterial.cpp -text
 SRC/material/nD/PlaneStressUserMaterial.h -text
 SRC/material/nD/PlasticDamageConcrete3d.cpp -text
 SRC/material/nD/PlasticDamageConcrete3d.h -text
+SRC/material/nD/PlasticDamageConcretePlaneStress.cpp -text
+SRC/material/nD/PlasticDamageConcretePlaneStress.h -text
 SRC/material/nD/PlateFiberMaterial.cpp -text
 SRC/material/nD/PlateFiberMaterial.h -text
 SRC/material/nD/PlateFromPlaneStressMaterial.cpp -text
