Adding J2 beam fiber 3D formulation

--- a/.gitattributes
+++ b/.gitattributes
@@ -3117,6 +3117,8 @@ SRC/material/nD/J2AxiSymm.cpp -text
 SRC/material/nD/J2AxiSymm.h -text
 SRC/material/nD/J2BeamFiber2d.cpp -text
 SRC/material/nD/J2BeamFiber2d.h -text
+SRC/material/nD/J2BeamFiber3d.cpp -text
+SRC/material/nD/J2BeamFiber3d.h -text
 SRC/material/nD/J2PlaneStrain.cpp -text
 SRC/material/nD/J2PlaneStrain.h -text
 SRC/material/nD/J2PlaneStress.cpp -text
