L.Jiang - initial import thermal materials

--- a/.gitattributes
+++ b/.gitattributes
@@ -3073,6 +3073,10 @@ SRC/material/nD/BeamFiberMaterial2d.h -text
 SRC/material/nD/BidirectionalMaterial.tex -text
 SRC/material/nD/CapPlasticity.cpp -text
 SRC/material/nD/CapPlasticity.h -text
+SRC/material/nD/Concrete02Thermal.cpp -text
+SRC/material/nD/Concrete02Thermal.h -text
+SRC/material/nD/ConcreteECThermal.cpp -text
+SRC/material/nD/ConcreteECThermal.h -text
 SRC/material/nD/ConcreteMcftNonLinear5.cpp -text
 SRC/material/nD/ConcreteMcftNonLinear5.h -text
 SRC/material/nD/ConcreteMcftNonLinear7.cpp -text
@@ -3091,8 +3095,14 @@ SRC/material/nD/CycLiqCPSP3D.cpp -text
 SRC/material/nD/CycLiqCPSP3D.h -text
 SRC/material/nD/CycLiqCPSPPlaneStrain.cpp -text
 SRC/material/nD/CycLiqCPSPPlaneStrain.h -text
+SRC/material/nD/DruckerPrager3DThermal.cpp -text
+SRC/material/nD/DruckerPrager3DThermal.h -text
+SRC/material/nD/DruckerPragerThermal.cpp -text
+SRC/material/nD/DruckerPragerThermal.h -text
 SRC/material/nD/ElasticCrossAnisotropic.cpp -text
 SRC/material/nD/ElasticCrossAnisotropic.h -text
+SRC/material/nD/ElasticIsotropic3DThermal.cpp -text
+SRC/material/nD/ElasticIsotropic3DThermal.h -text
 SRC/material/nD/ElasticIsotropicAxiSymm.cpp -text
 SRC/material/nD/ElasticIsotropicAxiSymm.h -text
 SRC/material/nD/ElasticIsotropicBeamFiber.cpp -text
@@ -3102,6 +3112,8 @@ SRC/material/nD/ElasticIsotropicBeamFiber2d.h -text
 SRC/material/nD/ElasticIsotropicMaterial.cpp -text
 SRC/material/nD/ElasticIsotropicMaterial.h -text
 SRC/material/nD/ElasticIsotropicMaterial.tex -text
+SRC/material/nD/ElasticIsotropicMaterialThermal.cpp -text
+SRC/material/nD/ElasticIsotropicMaterialThermal.h -text
 SRC/material/nD/ElasticIsotropicPlaneStrain2D.cpp -text
 SRC/material/nD/ElasticIsotropicPlaneStrain2D.h -text
 SRC/material/nD/ElasticIsotropicPlaneStrain2D.tex -text
@@ -3112,6 +3124,8 @@ SRC/material/nD/ElasticIsotropicPlateFiber.cpp -text
 SRC/material/nD/ElasticIsotropicPlateFiber.h -text
 SRC/material/nD/ElasticIsotropicThreeDimensional.cpp -text
 SRC/material/nD/ElasticIsotropicThreeDimensional.h -text
+SRC/material/nD/ElasticMaterialThermal.cpp -text
+SRC/material/nD/ElasticMaterialThermal.h -text
 SRC/material/nD/ElasticOrthotropicMaterial.cpp -text
 SRC/material/nD/ElasticOrthotropicMaterial.h -text
 SRC/material/nD/ElasticOrthotropicThreeDimensional.cpp -text
@@ -3134,12 +3148,16 @@ SRC/material/nD/J2PlaneStress.cpp -text
 SRC/material/nD/J2PlaneStress.h -text
 SRC/material/nD/J2Plasticity.cpp -text
 SRC/material/nD/J2Plasticity.h -text
+SRC/material/nD/J2PlasticityThermal.cpp -text
+SRC/material/nD/J2PlasticityThermal.h -text
 SRC/material/nD/J2PlateFiber.cpp -text
 SRC/material/nD/J2PlateFiber.h -text
 SRC/material/nD/J2PlateFibre.cpp -text
 SRC/material/nD/J2PlateFibre.h -text
 SRC/material/nD/J2ThreeDimensional.cpp -text
 SRC/material/nD/J2ThreeDimensional.h -text
+SRC/material/nD/J2ThreeDimensionalThermal.cpp -text
+SRC/material/nD/J2ThreeDimensionalThermal.h -text
 SRC/material/nD/LinearCap.cpp -text
 SRC/material/nD/LinearCap.h -text
 SRC/material/nD/Makefile -text
@@ -3162,16 +3180,32 @@ SRC/material/nD/PlasticDamageConcrete3d.cpp -text
 SRC/material/nD/PlasticDamageConcrete3d.h -text
 SRC/material/nD/PlasticDamageConcretePlaneStress.cpp -text
 SRC/material/nD/PlasticDamageConcretePlaneStress.h -text
+SRC/material/nD/PlasticDamageConcretePlaneStressThermal.cpp -text
+SRC/material/nD/PlasticDamageConcretePlaneStressThermal.h -text
 SRC/material/nD/PlateFiberMaterial.cpp -text
 SRC/material/nD/PlateFiberMaterial.h -text
+SRC/material/nD/PlateFiberMaterialThermal.cpp -text
+SRC/material/nD/PlateFiberMaterialThermal.h -text
 SRC/material/nD/PlateFromPlaneStressMaterial.cpp -text
 SRC/material/nD/PlateFromPlaneStressMaterial.h -text
+SRC/material/nD/PlateFromPlaneStressMaterialThermal.cpp -text
+SRC/material/nD/PlateFromPlaneStressMaterialThermal.h -text
 SRC/material/nD/PlateRebarMaterial.cpp -text
 SRC/material/nD/PlateRebarMaterial.h -text
+SRC/material/nD/PlateRebarMaterialThermal.cpp -text
+SRC/material/nD/PlateRebarMaterialThermal.h -text
 SRC/material/nD/PressureDependentElastic3D.cpp -text
 SRC/material/nD/PressureDependentElastic3D.h -text
 SRC/material/nD/SimplifiedJ2.cpp -text
 SRC/material/nD/SimplifiedJ2.h -text
+SRC/material/nD/StainlessECThermal.cpp -text
+SRC/material/nD/StainlessECThermal.h -text
+SRC/material/nD/Steel01Thermal.cpp -text
+SRC/material/nD/Steel01Thermal.h -text
+SRC/material/nD/Steel02Thermal.cpp -text
+SRC/material/nD/Steel02Thermal.h -text
+SRC/material/nD/SteelECThermal.cpp -text
+SRC/material/nD/SteelECThermal.h -text
 SRC/material/nD/TclModelBuilderNDMaterialCommand.cpp -text
 SRC/material/nD/UWmaterials/BoundingCamClay.cpp -text
 SRC/material/nD/UWmaterials/BoundingCamClay.h -text
