--- a/.gitattributes
+++ b/.gitattributes
@@ -2847,6 +2847,8 @@ SRC/element/pyMacro/PY_Macro2D.h -text
 SRC/element/shell/Makefile -text
 SRC/element/shell/R3vectors.cpp -text
 SRC/element/shell/R3vectors.h -text
+SRC/element/shell/ShellANDeS.cpp -text
+SRC/element/shell/ShellANDeS.h -text
 SRC/element/shell/ShellDKGQ.cpp -text
 SRC/element/shell/ShellDKGQ.h -text
 SRC/element/shell/ShellDKGT.cpp -text
