--- a/.gitattributes
+++ b/.gitattributes
@@ -3548,6 +3548,8 @@ SRC/material/uniaxial/ContinuumUniaxial.cpp -text
 SRC/material/uniaxial/ContinuumUniaxial.h -text
 SRC/material/uniaxial/CubicSpline.cpp -text
 SRC/material/uniaxial/CubicSpline.h -text
+SRC/material/uniaxial/DamperMaterial.cpp -text
+SRC/material/uniaxial/DamperMaterial.h -text
 SRC/material/uniaxial/DoddRestr.cpp -text
 SRC/material/uniaxial/DoddRestr.h -text
 SRC/material/uniaxial/DoddRestrepo.f -text
